# LOLRCG

./: Cargo.toml  LICENSE  README.md  champions.txt
.github/workflows/: rust.yml
src/: champions.rs  cli.rs  generator.rs  gui.rs  main.rs
