[package]
name = "lolrcg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "4.0.18", features = ["derive"] }
druid = { git = "https://github.com/linebender/druid.git" }
